Adds three more pages for cities.

--- a/index.html
+++ b/index.html
@@ -5,46 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WA State</title>
-    <link href="css/style.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
         <div class="header-logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/Flag_map_of_Washington.svg"
+            <img src="resources/images/Washington/Flag_map_of_Washington.svg"
                 alt="Washington State">
         </div>
         <nav>
             <ul class="navlinks">
                 <li><a href="./">Home</a></li>
-                <li><a href="/Seattle.html">Seattle</a></li>
-                <li><a href="/Tri-Cities.html">Tri-Cities</a></li>
-                <li><a href="/Yakima.html">Yakima</a></li>
-                <li id="contact-button"><a id="contact-button-link" href="/contact.html">Contact</a></li>
+                <li><a href="Olympia.html">Olympia</a></li>
+                <li><a href="Seattle.html">Seattle</a></li>
+                <li><a href="Yakima.html">Yakima</a></li>
+                <li id="contact-button"><a id="contact-button-link" href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <div class="banner"><img src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Seal_of_Washington.svg"
-            alt="Washington State Seal"></div>
+    <div class="statebanner">
+        <img src="resources/images/Washington/Seal_of_Washington.svg"
+            alt="Washington State Seal">
+    </div>
     <section id="introduction">
         <h1>Welcome to the official website of the <strong>State of Washington</strong>!</h1>
         <p>
             Whether you're a resident, a visitor, or a business owner, we are delighted to provide you with a
-            comprehensive resource for all things related to our beautiful and diverse state.
-            As you explore this government website, you'll find a wealth of information about state services,
-            resources for residents and businesses, and insights into the initiatives that make Washington a great
-            place to live, work, and visit.
+            comprehensive resource for all things related to our beautiful and diverse state. As you explore this
+            government website, you'll find a wealth of information about state services, resources for residents and
+            businesses, and insights into the initiatives that make Washington a great place to live, work, and visit.
         </p>
     </section>
     <div class="center-section">
         <main>
             <section>
                 <h2>Who we are</h2>
+                <img id="statemap" src="resources/images/Washington/Washington-Map-1265x882.jpg" alt="Washington state map">
                 <p>
                     Nestled in the Pacific Northwest, Washington is a state of captivating contrasts. From the vibrant
                     urban
-                    landscapes of cities like Seattle to the serene beauty of the Cascades and the Pacific coastline,
+                    landscapes of cities like Olympia to the serene beauty of the Cascades and the Pacific coastline,
                     Washington offers a unique blend of metropolitan energy and natural splendor. Our state is renowned
                     for
                     its innovation, leading the way in technology and fostering a culture of creativity and discovery.
@@ -53,53 +54,173 @@
                     high quality of life for its residents. With a rich cultural tapestry woven from diverse
                     communities,
                     each region contributes to the overall vibrancy and uniqueness that defines our state.
-
-
                 </p>
             </section>
             <section>
                 <h2>Facts about Washington State</h2>
-                <p>
-                <h4>State's Population:</h4> As of the last estimate in 2022, Washington State's population is approximately 7.8 million.
+                <ul>
+                    <li>
+                        <h4>State's Population:</h4>
+                        <p>As of the last estimate in 2022, Washington State's population is approximately 7.8 million.
+                        </p>
+                    </li>
 
-                <h4>Year the State was Incorporated:</h4>
-                Washington gained statehood on November 11, 1889.
+                    <li>
+                        <h4>Year the State was Incorporated:</h4>
+                        <p>Washington gained statehood on November 11, 1889.</p>
+                    </li>
 
-                <h3>Region of the State:</h3>
-                Washington State is divided into various regions, including the Puget Sound region, the Eastern region,
-                the
-                Central region, and the Coastal region.
+                    <li>
+                        <h3>Region of the State:</h3>
+                        <p>Washington State is divided into various regions, including the Puget Sound region, the
+                            Eastern
+                            region, the Central region, and the Coastal region.</p>
+                    </li>
 
-                <h3>Classification of the State:</h3>
-                Washington is a diverse state with a mix of urban, suburban, and rural areas. The western part of the
-                state,
-                particularly the Puget Sound region, is more urban, while the eastern part has more rural and suburban
-                areas.
+                    <li>
+                        <h3>Classification of the State:</h3>
+                        <p>Washington is a diverse state with a mix of urban, suburban, and rural areas. The western
+                            part of
+                            the state, particularly the Puget Sound region, is more urban, while the eastern part has
+                            more
+                            rural and suburban areas.</p>
+                    </li>
 
-                <h3>Average Income Level:</h3>
-                The average income in Washington State varies across regions. Generally, urban areas like Seattle tend
-                to
-                have higher incomes compared to some rural areas. The state has a diverse economy, including technology,
-                agriculture, and manufacturing, influencing income levels across different areas.
-                </p>
+                    <li>
+                        <h3>Average Income Level:</h3>
+                        <p>The average income in Washington State varies across regions. Generally, urban areas like
+                            Olympia
+                            tend to have higher incomes compared to some rural areas. The state has a diverse economy,
+                            including technology, agriculture, and manufacturing, influencing income levels across
+                            different
+                            areas.</p>
+                    </li>
+                </ul>
+            </section>
+            <section id="Calendar">
+                <h2>This months events</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Monday</th>
+                            <th>Tuesday</th>
+                            <th>Wednesday</th>
+                            <th>Thursday</th>
+                            <th>Friday</th>
+                            <th>Saturday</th>
+                        </tr>
+                    </thead>
+                    <tr>
+                        <td>11/26-12/2</td>
+                        <td>Public Health Awareness Week</td>
+                        <td></td>
+                        <td>State Innovation Day</td>
+                        <td>Employee Training</td>
+                        <td></td>
+                        <td>Community Volunteer Day</td>
+                    </tr>
+                    <tr>
+                        <td>12/3-12/9</td>
+                        <td></td>
+                        <td>Winter Safety Seminar</td>
+                        <td></td>
+                        <td>Government Innovation Expo</td>
+                        <td>Employee Appreciation Day (Half Day)</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>12/10-12/16</td>
+                        <td>Environmental Sustainability Forum</td>
+                        <td>Public Service Awards Ceremony</td>
+                        <td></td>
+                        <td>Community Outreach Day</td>
+                        <td></td>
+                        <td>Staff Retreat (Full Day)</td>
+                    </tr>
+                    <tr>
+                        <td>12/17-12/23</td>
+                        <td>Holiday Celebration</td>
+                        <td></td>
+                        <td>Leadership Training</td>
+                        <td></td>
+                        <td>Employee Wellness Day</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>12/24-12/30</td>
+                        <td>Christmas Eve (Office Closed)</td>
+                        <td>Christmas Day (Office Closed)</td>
+                        <td></td>
+                        <td>New Year's Eve Celebration</td>
+                        <td>New Year's Day (Office Closed)</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>12/31-01/06</td>
+                        <td></td>
+                        <td>Year-End Review Meeting</td>
+                        <td>Employee Development Workshop</td>
+                        <td></td>
+                        <td></td>
+                        <td>Weekend Retreat</td>
+                    </tr>
+                </table>
+
             </section>
 
+            <section id="contact">
+                <h2>Contact</h2>
+                <br>
+                <form action="send_email.php" method="post">
+                    <label for="user_name">Your Name:</label>
+                    <input type="text" name="user_name" id="user_name" placeholder="John Doe" required>
+                    <label for="user_email">Your Email:</label>
+                    <input type="email" name="user_email" id="user_email" placeholder="JohnDoe@email.com" required>
+                    <label for="email_subject">Subject:</label>
+                    <input type="text" name="email_subject" id="email_subject" required>
+                    <label for="email_body">Message:</label>
+                    <textarea name="email_body" id="email_body" rows="15"></textarea>
+                    <input type="submit" value="Submit">
+                </form>
+            </section>
         </main>
 
         <aside>
-            <h4>Cities by population</h4>
+            <h4>Explore Washington Cities</h4>
             <ol>
-                <li><a href=""></a>Seattle</li>
-                <li><a href=""></a>Tri-Cities</li>
-                <li><a href=""></a>Yakima</li>
+                <li>
+                    <h5><a href="Olympia.html">Olympia</a></h5>
+                    <p>
+                        Welcome to Olympia, the charming capital city of Washington. Immerse yourself in its rich history, cultural heritage, and picturesque landscapes. Explore the Capitol Building, stroll along the waterfront, and experience the unique blend of tradition and modernity that defines Olympia.
+                    </p>
+                </li>
+                <li>
+                    <h5><a href="Seattle.html">Seattle</a></h5>
+                    <p>
+                        Dive into the dynamic energy of Seattle, a city nestled in the heart of innovation and creativity. Marvel at the iconic Space Needle, explore vibrant neighborhoods like Pike Place Market, and enjoy the panoramic views of Puget Sound. Seattle welcomes you with a mix of urban sophistication and natural beauty.
+                    </p>
+                </li>
+                <li>
+                    <h5><a href="Yakima.html">Yakima</a></h5>
+                    <p>
+                        Nestled in the heart of Washington, Yakima is known for its scenic landscapes and agricultural richness. Explore the local vineyards, orchards, and cultural events that make Yakima a unique and welcoming destination.
+                    </p>
+                </li>
             </ol>
+            <h4>
+                Need help planning a visit? Click <a id = "trivago" href="https://trivago.com" target="_blank">here</a>!
+            </h4>
         </aside>
+        
     </div>
+
     <footer>
         <p>
-            &copy; 2023
+            &copy; 2023 Washington State  | Olympia Street, Olympia, WA 12345 | Phone: (555) 123-4567
         </p>
     </footer>
+    
 
 </body>
 
