updates to work with host and fixing file paths/form.

--- a/Seattle.html
+++ b/Seattle.html
@@ -5,6 +5,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Seattle - Emerald City of Washington</title>
       <link rel="stylesheet" href="css/style.css">
+      <link href="data:image/x-icon;base64,AAABAAEAEBACAAAAAACwAAAAFgAAACgAAAAQAAAAIAAAAAEAAQAAAAAAQAAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAEnUuAAAAAAAAAAAAAAAAAA/8AAAP/gAAH/4AAD//AAA//wAAcf8AAPH/AADj/wAA5/8AAOf/AAAAAAAAAAAAAAAAAAD//wAA//8AAP//AADwAwAA8AEAAOABAADAAAAAwAAAAI4AAAAOAAAAHAAAABgAAAAYAAAA//8AAP//AAD//wAA" rel="icon" type="image/x-icon">
+
    </head>
    <body>
       <header>
