--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>WA State</title>
       <link rel="stylesheet" href="css/style.css">
+      <link href="data:image/x-icon;base64,AAABAAEAEBACAAAAAACwAAAAFgAAACgAAAAQAAAAIAAAAAEAAQAAAAAAQAAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAEnUuAAAAAAAAAAAAAAAAAA/8AAAP/gAAH/4AAD//AAA//wAAcf8AAPH/AADj/wAA5/8AAOf/AAAAAAAAAAAAAAAAAAD//wAA//8AAP//AADwAwAA8AEAAOABAADAAAAAwAAAAI4AAAAOAAAAHAAAABgAAAAYAAAA//8AAP//AAD//wAA" rel="icon" type="image/x-icon">
+
    </head>
    <body>
       <header>
@@ -165,7 +167,7 @@
             <section id="contact">
                <h2>Contact</h2>
                <br>
-               <form action="send_email.php" method="post">
+               <form method="post">
                 <label for="user_first_name">Your First Name:</label>
                 <input type="text" name="user_first_name" id="user_first_name" placeholder="John" required>
             
@@ -221,6 +223,6 @@
             &copy; 2023 Washington State  | Olympia Street, Olympia, WA 12345 | Phone: (555) 123-4567
          </p>
       </footer>
-      <script src="/javascript/script.js"></script>
+      <script src="/local-government-website/javascript/emailverification.js"></script>
    </body>
 </html>
